# rust_websocket_demo

./: Cargo.toml  README.md
examples/: client.rs
src/: main.rs  msg_base.rs
