[package]
edition = "2021"
name = "websocket"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.21"
futures-util = {version = "0.3", default-features = false, features = ["sink"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = {version = "*", features = ["connect"]}
url = "*"
warp = "*"

[profile.release]
panic = "abort"
